force-app/main/default/objects/Activity/fields/Event_Test__c.field-meta.xml
<CustomField>
    <fullName>Event_Test__c</fullName>
    <label>Event Test</label>
    <length>32</length>
    <type>Text</type>
</CustomField>