force-app/main/default/objects/Activity/fields/KimbleOne__AlertInCalendar__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AlertInCalendar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alert In Kimble Calendar</label>
    <type>Checkbox</type>
</CustomField>