force-app/main/default/objects/Activity/fields/KimbleOne__IsSynchronisedWithAssignment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsSynchronisedWithAssignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Synchronised With Assignment</label>
    <type>Checkbox</type>
</CustomField>