force-app/main/default/objects/Activity/fields/KimbleOne__IsSynchronisedWithTask__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsSynchronisedWithTask__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Synchronised With Task</label>
    <type>Checkbox</type>
</CustomField>